# AI-chatbot

aichatbot/: pyproject.toml
aichatbot/src/aichatbot/: __init__.py  chatbot.py  main.py
